# turing-py

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  README.pt.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
src/pytm/: __init__.py
src/pytm/alphabet/: symbol.py  tape_alphabet.py
src/pytm/machine/: states.py  tape.py
src/pytm/transition/: __init__.py  direction.py  transition.py  transition_function.py
src/tmpy/: __init__.py  exception.py
src/tmpy/alphabet/: __init__.py  input_alphabet.py  symbol.py  tape_alphabet.py
src/tmpy/dsl/: __init__.py  ast.py  lexer.py  loader.py  parser.py  token.py
src/tmpy/machine/: __init__.py  machine.py  states.py  tape.py
src/tmpy/transition/: __init__.py  direction.py  transition.py  transition_function.py
test/: test_alphabet.py  test_symbol.py  test_transition.py  test_transition_function.py
tests/: test_alphabet.py  test_ast.py  test_direction.py  test_lexer.py  test_machine.py  test_machine_loader.py  test_parser.py  test_states.py  test_symbol.py  test_tape.py  test_token.py  test_transition.py  test_transition_function.py
