[project]
name = "turing-py"
version = "1.0.1"
description = "Education Turing Machine simulator in Python"
authors = [
    {name = "Eric Santos",email = "ericshantos13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tmpy", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
