[project]
name = "turing-py"
version = "2.2.0"
description = "Education Turing Machine simulator in Python"
authors = [
    {name = "Eric Santos",email = "ericshantos13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "tmpy", from = "src"}]

[tool.black]
line-length = 150
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3

[tool.flake8]
max-line-length = 150

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pre-commit = "^4.5.1"
flake8-pyproject = "^1.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
